project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_if/scalar_assignment_in_condition.ul
int F() {
    if(  temp=0 ) { }
}
